--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -146,6 +146,16 @@ kungfury  3061 12.0  0.3  74708 31304 pts/1    S+   14:13   0:00 nmap -oX - 81.1
 		\paragraph{}
 			Un aspect important de l'administration d'un parc informatique est de savoir qui est présent sur le réseau et surtout à quel moment. C'est pourquoi nous devons récupérer la date où le scanner voit la machine ou le service. Si nous voyons un service ouvert à un telle date et que depuis ce service n'existe plus, nous pouvons nous poser des questions. Quoi qu'il en soit pour voir les machines de façon régulière le script doit être automatisé. C'est pourquoi nous allons en faire un daemon pour qu'il puisse agir en permanence. Uns fois ces tâches effectuée, les résultats seront visibles depuis une interface WEB. Ainsi, nous pourrons voir d'un coup d'oeil voir les machines et les services présent. Il y aura même la possibilité de générer un fichier de règles en fonctions des services que nous voulons ou non. Si par exemple sur une machine un service inconnu est en écoute sur le port 12345, l'administrateur réseau pourra selectionner le fait qu'il ne veut pas le laisser passer. Le site générera un fichier de règles de pare-feu.
 \part{Présentation et installation de la solution}
+	\chapter{Prérequis}
+		\paragraph{}
+			Avant de se lancer dans l'installation de notre solution, plusieurs paquets doivent être présent sur la machine. Voici la liste des paquets necessaires, ils sont en général présent dans les dépôts classique d'une machine linux :
+			\begin{itemize}
+				\item python-mysql.connector
+				\item python-termcolor
+				\item python-netaddr
+				\item mysql
+				\item nmap
+			\end{itemize}
 	\chapter{Le script d'installation}
 		\paragraph{}
 			Pour l'installation de notre solution nous proposons un script qui installera toute la partie BDD (dont nous verrons la structure plus tard) et daemon. Nous avons au départ donc deux fichiers à savoir "install\_scanner.sh" et "jajscan.py" dont nous parlerons plus tard. Le script d'installtion peut recevoir plusieurs arguments qui sont les suivants :
@@ -302,7 +312,7 @@ else:
 				\item Le service est connu dans la BDD : Le script va alors analyser son nom, son état, sa banner et sa version en fonction de la BDD. Il fera un update des informations qui auront changées. Il fera aussi un update de la date (colonne "last\_view")
 			\end{itemize}
 		\paragraph{}
-			Une fois l'insertion en BDD terminée, le script va soit se terminer et recommencer, ou alors envoyer les résultats par mail avant de recommencer. Si c'est le cas, le script va remplir un fichier ".xls" (fichier tableur) qu'il mettra en pièce jointe du mail qui sera envoyé. L'envoi du mail se basera aussi sur les informations renseignées dans le fichier de configuration.
+			Une fois l'insertion en BDD terminée, le script va soit se terminer et recommencer, ou alors envoyer les résultats par mail avant de recommencer. Si c'est le cas, le script va remplir un fichier ".csv" (fichier tableur) qu'il mettra en pièce jointe du mail qui sera envoyé. L'envoi du mail se basera aussi sur les informations renseignées dans le fichier de configuration.
 	\chapter{Fonctions}
 		\section{analyze()}
 			{\setlength{\parindent}{0cm}
@@ -310,7 +320,7 @@ else:
 			}
 			$Arguments :$
 			\begin{description}
-				\item nm : Objet NMAP
+				\item nm : Objet NMAP\\
 			\end{description}
 			$Description : $ Cette fonction permet de trier les informations stockées dans l'objet NMAP. Elle remplira les structures "Host" et "Service" puis appelera la fonction "start\_insert()"
 		\section{check\_element\_service()}
@@ -326,15 +336,30 @@ else:
 				\item cursor : Curseur lié à la BDD\\
 			\end{description}
 			$Description : $ Cette fonction permet de vérifier les informations stockées dans la BDD. La variable check aura par exemple comme affectation "nom\_service", "banner", "state" ou "version". Par la suite elle va comparer la nouvelle valeur ("newval") avec ce qu'y est présent dans la BDD.  Elle prendra soin de comparer ces valeurs en fonctions d'une machine et d'un port.
+		\section{connect\_bdd()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ connect\_bdd\\\\
+			}
+			$Arguments :$\\\\
+			$Description : $ Cette fonction permet la connexion avec la BDD en fonction des informations stockées dans le fichier de configuration "pythonnmap.conf". Elle retournera un objet "mysql.connector" qui permettra le dialogue vec la BDD ainsi que la récupération du cursor pour les requêtes SQL.
 		\section{datestr()}
 			{\setlength{\parindent}{0cm}
 			$Nom :$ datestr\\\\
 			}
 			$Arguments :$
 			\begin{description}
-				\item tmp\_time : Date à convertir
+				\item tmp\_time : Date à convertir\\
 			\end{description}
-			$Description : $ Cette fonction permet deconvertir un objet Python date en String au format HH:MM:SS.
+			$Description : $ Cette fonction permet de convertir un objet Python date en String au format HH:MM:SS.
+		\section{define\_ip\_addr()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ define\_ip\_addr\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item rangeip : Plage IP\\
+			\end{description}
+			$Description : $ Cette fonction permet de déuire les IP possible dans une plage IP. Cette fonction attend en paramètre soit la forme "X.X.X.0/XX" ou la forme "X.X.X.X-X". Ainsi, la fonction retournera une liste d'IP pour pouvoir scanner les IP une par une.
 		\section{insertmachine()}
 			{\setlength{\parindent}{0cm}
 			$Nom :$ insertmachine\\\\
@@ -357,6 +382,44 @@ else:
 				\item cursor : Curseur lié à la BDD\\
 			\end{description}
 			$Description : $ Cette fonction permet d'insérer les services lié à une machine dans la BDD. Contrairement à son nom, la fonction attend une liste de la strcture "Service" et non seulement une liste de port.
+		\section{interruptprogram()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ interruptprogram\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item *args : Argument de l'interruption\\
+			\end{description}
+			$Description : $ Cette fonction est appelée lorsque le script reçoit une interruption clavier. Elle stopera le programme et coupera la connexion avec la BDD si jamais elle est toujours ouverte.
+		\section{readconf()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ readconf\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item param : Configuration recherchée\\
+			\end{description}
+			$Description : $ Cette fonction permet de retourner la valeur d'un argument provenant du fichier de configuration. Par exemple grâce à l'appel "readconf("Reseau")", nous obtiendrons la plage IP que l'administrateur a spécifié dans le "pythonnmap.conf".
+		\section{result\_to\_text\_file()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ result\_to\_text\_file\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item temptotal : Temps total du scan
+				\item cursor : Curseur lié à la BDD\\
+			\end{description}
+			$Description : $ Cette fonction n'est \textbf{plus utilisée} dans la version actuelle du script. Elle permet de mettre les résultats présent dans la BDD sous forme de fichier texte. Elle reste présente si jamais il est préférable, dans l'avenir, de recevoir les résultats par mail sous forme de fichier texte.
+		\section{result\_to\_csv\_file()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ result\_to\_csv\_file\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item temptotal : Temps total du scan
+				\item cursor : Curseur lié à la BDD\\
+			\end{description}
+			$Description : $ Cette fonction permet de mettre les résultats présent dans la BDD sous forme de fichier "csv". Lorsque l'utilisateur demande à recevoir les résultats par mail, c'est cette fonction qui générera le fichier mit en pièce jointe du mail.
 		\section{returnmid()}
 			{\setlength{\parindent}{0cm}
 			$Nom :$ returnmid\\\\
@@ -386,5 +449,43 @@ else:
 				\item port : Port du service
 				\item cursor : Curseur lié à la BDD\\
 			\end{description}
-			$Description : $ Cette fonction permet de retourner le "sid" d'un service en fonction de son port. Elle ira chercher cette information dans la BDD
+			$Description : $ Cette fonction permet de retourner le "sid" d'un service en fonction de son port. Elle ira chercher cette information dans la BDD.
+		\section{start\_insert()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ start\_insert\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item listehost : Liste d'objet "Host"\\
+			\end{description}
+			$Description : $ Cette fonction permet de lancer l'insertion des informations en BDD. Grâce à une liste d'objet "Host", elle fera appelle à la fonction "insertmachine" et "insertport" qui seront déduire les informations stockées dans la liste. Par la suite elle fera un commit des requêtes fait dans les deux fonctions. 
+		\section{send\_result\_mail()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ send\_result\_mail\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item reseau : Réseau scannée par le scanner\\\
+			\end{description}
+			$Description : $ Cette fonction permet l'envoi des résultats du scanner par mail. Elle fera d'abord appel à la fonction "result\_to\_csv\_file" pour ensuite joindre le fichier généré en pièce jointe. Le programme enverra en fonction des paramètres renseignés dans le fichier "pythonnmap.conf" et inscrira dans l'objet du mail "Resultat script" et dans le corps "Je suis le script python et voici les resultats pour le reseau ...".
+		\section{start\_scan()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ start\_scan\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item ip : IP à scanner
+				\item port : Plage de port à scanner
+				\item mode : Vitesse du scan "fast" ou "slow"\\
+			\end{description}
+			$Description : $ Cette fonction permet de lancer le scan NMAP. Elle prendra en compte le vitesse choisi par l'utilisateur. Si la vitesse est "fast", le programme utilisera les threads NAMP. Dans le cas contraire il fera un scan normal utilisant les paramètres "-sV -f --script banner".
+		\section{writelog()}
+			{\setlength{\parindent}{0cm}
+			$Nom :$ writelog\\\\
+			}
+			$Arguments :$
+			\begin{description}
+				\item chaine : Chaine de caractère à écrire dans les logs\\
+			\end{description}
+			$Description : $ Cette fonction permet d'écrire dans les logs. Dans tout le programme sont présent des appels à cette fonction. Il suffit juste de renseigner l'erreur en paramètre et celle-ci sera renseignée dans les logs avec la date d'écriture du log.
 \end{document}
